--- a/1과목.md
+++ b/1과목.md
@@ -35,6 +35,84 @@
  - 기능과 자료의 의존 관계를 동시에 표현할 수 있다.
  - 보기 쉽고 이해하기 쉽다.
 
+- 상태 다이어그램(State Diagram)
+ - 하나의 객체가 자신이 속한 클래스의 상태 변화 혹은 다른 객체와의 상호 작용에 다라 상태가 어떻게 변화하는지를 표현한다.
+ - 이벤트(event)에 의한 객체들의 상태 변화를 그림으로 표현한다.
+ - 럼바우 객체지향 분석기법에서 동적 모델링에 활용된다.
+ - 객체 전이의 요인이 되는 요소 -> event
+
+- UML 확장 모델
+ - 스테레오 타입을 표현하는 기호 겹화살괄호 (<<>>)
+
+- 유스케이스 다이어그램(14-7)
+ - 개발될 시스템과 관련된 외부 요소들, 즉 사용자와 다른 외부 시스템들이 개발될 시스템을 이용해 수행할 수 있는 기능을 사용자의 관점(View)에서 표현한 것이다.
+ - 외부 요소와 시스템 간의 상호 작용을 확인할 수 있다.
+ - 사용자의 요구사항을 분석하기 위한 도구로 사용된다.
+ - 시스템의 범위를 파악할 수 있다.
+ - 유스케이스 다이어그램의 구성 요소
+  - 시스템(System)/시스템 범위(System Scope)
+   - 시스템 내부에서 수행되는 기능들을 외부 시스템과 구분하기 위해 시스템 내부 유스 케이스들을 사각형으로 묶어 시스템의 범위를 표현함
+  - 액터(Actor)
+   - 시스템과 상호작용을 하는 모든 외부 요소로, 사람이나 외부 시스템을 의미함
+   - 액터 : 시스템을 사용함으로써 이득을 얻는 대상으로, 주로 사람이 해당함
+   - 부액터 : 주액터의 목적 달성을 위해 시스템에 서비스를 제공하는 외부 시스템으로, 조직이나 기관 등이 될 수 있음
+  - 유스케이스(Use Case) 
+   - 사용자가 보는 관점에서 시스템이 액터에게 제공하는 서비스 또는 기능을 표현한 것
+  - 관계(Relationship)
+   - 유스케이스 다이어그램에서 관계는 액터와 유스케이스,유스케이스와 유스케이스 사시엥서 나타날 수 있으며, 포함 관계, 확장 관계, 일반화 관계의 3종류가 있음
+  - ex)
+   - 시스템과 상호작용하는 모든 외부요소를 액터라고 합니다.
+   - 액터가 인식할 수 없는 시스템 내부의 기능을 하나의 유스케이스로 파악해서는 안된다. 
+   - 유스케이스는 사용자 측면에서의 요구사항으로, 사용자가 원하는 목표를 달성하기 위해 수행할 내용을 기술한다.
+   - 시스템 액터는 다른 프로젝트에서 이미 개발되어 사용되고 있으며, 본 시스템과 데이터를 주고받는 등 서로 연동되는 시스템을 말한다.
+
+- UI의 종류
+ - CLI(Command Line Interface) : 명령과 출력이 텍스트 형태로 이루어지는 인터페이스
+ - GUI(Graphical User Interface) : 아이콘이나 메뉴를 마우스로 선택하여 작업을 수행하는 그래픽 환경의 인터페이스
+ - NUI(Natural User Interface) : 사용자의 일이나 행동으로 기기를 조작하는 인터페이스
+ - OUI(Organic User Interface) : 모든 사물과 사용자 간의 상호작용을 위한 인터페이스
+
+- 주요 아키텍처 패턴(Patterns)의 종류
+ - 레이어 패턴(Layers Pattern) :시스템을 계층(Layer)으로 구분하여 구성하는 고전적인 방법 중의 하나로 각각의 서브시스템들이 계층 구조를 이루며, 하위 계층은 상위 계층에대한 서비스 제공자가 되고, 상위 계층은 하위 계층의 클라이언트가 됨
+ - 클라이언트-서버 패턴(Client-Server Pattern): 하나의 서버 컴포넌트와 다수의 클라이언트 컴포넌트로 구성되는 패턴으로, 클라이언트가 서버에 요청하고 응답을 받아 사용자에게 제공하는 방식
+ - 파이프-필터 패턴(Pipe-Filter Pattern): 데이터 스트림 절차의 각 단계를 필터(Filter) 컴포넌트로 캡슐화하여 파이프(Pipe)를 통해 데이터를 전송하는 패턴
+ - 모델-뷰-컨트롤러 패턴(Model-View-Controller Pattern) :서브시스템을 모델(Model), 뷰(View), 컨트롤러(Controller)의 세부분으로 구조화하는 패턴
+
+- 럼바우의 객체지향 분석 절차
+ - (순서)
+ - 객체모형 -> 동적모형 -> 기능모형
+
+- 결합도(Coupling)16-14
+ - 결합도는 모듈 간에 상호 의존하는 정도 또는 두 모듈 사이의 연관 관계를 의미한다.
+ - 다양한 결합으로 모듈을 구성할 수 잇으나 결합도가 약할수록 품질이 높고, 강할수록 품질이 낮다.
+ - 결합도가 강하면 시스템 구현의 유지보수 작업이 어렵다.
+
+- 결합도의 종류 16-14
+ - 자료 결합도(Data Coupling) : 모듈 간의 인터페이스가 자료 요소로만 구성될 때의 결합도
+ - 스탬프(검인) 결합도(Stamp Coupling) : 모듈 간의 인터페이스로 배열이나 레코드 등의 자료 구조가 전달될 때의 결합도
+ - 제어 결합도(Control Coupling) : 어떤 모듈이 다른 모듈이나 내부의 논리적인 흐름을 제어하기 위해 제어 신호를 이용하여 통신하거나 제어 요소(Function Code,Switch,Tag,Flag)를 전달하는 결합도
+ - 외부 결합도(External Coupling) : 어떤 모듈에서 외부로 선언한 데이터(변수)를 다른 모듈에서 참조 할때의 결합도
+ - 공통(공유) 결합도(Common Coupling):공유되는 공통 데이터 영역을 여러 모듈이 사용할 때의 결합도
+ - 내용 결합도(Content Coupling) : 한 모듈이 다른 모듈의 내부 기능 및 그 내부 자료를 직접 참조하거나 수정할 때의 결합도
+ - ex)
+  - 스탬프 결합도는 두 모듈이 매개변수로 자료를 전달할 때 자료 구조 형태로 전달되어 이용될 때 데이터가 결합되어 있따고 한다. (o)
+  - 데이터 결합도는 모듈간의 인터페이스가 자료 요소로만 구성될 때의 결합도 입니다.(o)
+
+
+- 디자인 패턴 종류17-17
+ - 생성 패턴 : 추상 팩토리, 빌더, 팩토리 메소드, 프로토타입, 싱글톤
+ - 구조 패턴 : 어댑터, 브리지, 컴포지트, 데코레이터, 퍼싸드, 플라이웨이트, 프록시
+ - 행위 패턴 : 커멘드, 책인 연쇄, 인터프리터, 반복자, 중재자, 메멘토, 옵서버, 상태, 전략, 템플릿 메소드, 방문자
+
+- 미들웨어의 종류18
+ - DB : 데이터베이스 벤더에서 제공하는 클라리언트에서 원격의 데이터베이스와 연결하기 위한 미들웨어
+ - RPC(Remote Procedure Call) : 응용 프로그램의 프로시저를 사용하여 원격 프로시저를 마치 로컬 프로시저처럼 호출하는 방식의 미들웨어
+ - MOM(Message Oriented Middleware) : 메시지 기반의 비동기형 메시지를 전달하는 방식의 미들웨어
+ - ORB(Object Request Broker) : 객체지향 미들웨어로 코바(CORBA) 표준 스펙을 구현한 미들웨어
+ - WAS(Web Application Server) : 사용자의 요구에 따라 변하는 동적인 콘텐츠를 처리하기 위해 사용되는 미들웨어
+ - 
+  
+
 
 
 
